[package]
name = "peachy"
authors = ["nomoreqwerty <vlaadiolus@gmail.com>"]
version = "1.0.1"
repository = "https://github.com/nomoreqwerty/peachy"
homepage = "https://github.com/nomoreqwerty/peachy"
edition = "2021"
license = "MIT"
description = "Peachy is a simple async task manager, similar to thread pool but cooler and for structs"

[dependencies]
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros", "sync"] }
thiserror = "1.0.61"
anyhow = "1.0.82"
dashmap = "6.0.1"